Added localization (ru eng)

--- a/Cohelp/src/main/resources/messages/messages_en.properties
+++ b/Cohelp/src/main/resources/messages/messages_en.properties
@@ -1,4 +1,18 @@
-profile.page.welcome=Welcome!
+signUp.page.name=Name
+signUp.page.surname=Surname
+signUp.page.role=You?
+signUp.page.city=City
+signUp.page.street=Street
+signUp.page.house=House
+signUp.page.tel=Telephone number
+signUp.page.email=Email
+signUp.page.password=Password
+signUp.page.register=Registration
+header.page.about=About
+header.page.volunteers=Our volunteers
+header.page.events=Events
+header.page.signIn=Sign in
+header.page.signUp=Sign Up
 profile.page.good.work=Good work!
 Email.signUpDto.email=Enter right email
-Email.signUpDto.password= Password should be from 6 to 20 char
+Password.signUpDto.password= Password should be from 6 to 20 char
