--- a/Cohelp/src/main/resources/messages/messages_ru.properties
+++ b/Cohelp/src/main/resources/messages/messages_ru.properties
@@ -1,4 +1,17 @@
-profile.page.welcome=Добро пожаловать!
-profile.page.good.work=Хорошей работы
+signUp.page.name=Имя
+signUp.page.surname=Фамилия
+signUp.page.role=Вы?
+signUp.page.city=Город
+signUp.page.street=Улица
+signUp.page.house=Дом
+signUp.page.tel=Номер телефона
+signUp.page.email=Email
+signUp.page.register=Регистрация
+signUp.page.password=Пароль
+header.page.about=О проекте
+header.page.volunteers=Наши волонтеры
+header.page.events=Мероприятия
+header.page.signIn=Вход
+header.page.signUp=Регистрация
 Email.signUpDto.email=Введите корректный email
 Size.signUpDto.password= Пароль должен быть от 6 до 20 символов
