added custom scope, js validation, intellectual part (district and distance tasks)

--- a/Cohelp/src/main/resources/messages/messages_en.properties
+++ b/Cohelp/src/main/resources/messages/messages_en.properties
@@ -8,11 +8,21 @@ signUp.page.tel=Telephone number
 signUp.page.email=Email
 signUp.page.password=Password
 signUp.page.register=Registration
+
+
 header.page.about=About
 header.page.volunteers=Our volunteers
 header.page.events=Events
 header.page.signIn=Sign in
 header.page.signUp=Sign Up
-profile.page.good.work=Good work!
+
+signIn.page.signIn=Sign in
+signIn.page.password=Password
+
+main.page.volunteers=Our volunteers
+main.page.events=Events
+main.page.proceed=Proceed
+
+
 Email.signUpDto.email=Enter right email
-Password.signUpDto.password= Password should be from 6 to 20 char
+Size.signUpDto.password= Password should be from 6 to 20 char
