--- a/Cohelp/src/main/resources/messages/messages_ru.properties
+++ b/Cohelp/src/main/resources/messages/messages_ru.properties
@@ -8,10 +8,21 @@ signUp.page.tel=Номер телефона
 signUp.page.email=Email
 signUp.page.register=Регистрация
 signUp.page.password=Пароль
+
+
 header.page.about=О проекте
 header.page.volunteers=Наши волонтеры
 header.page.events=Мероприятия
 header.page.signIn=Вход
 header.page.signUp=Регистрация
+
+
+signIn.page.signIn=Войти
+signIn.page.password=Пароль
+
+main.page.volunteers=Наши волонтеры
+main.page.events=Мероприятия
+main.page.proceed=Перейти
+
 Email.signUpDto.email=Введите корректный email
 Size.signUpDto.password= Пароль должен быть от 6 до 20 символов
